--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundBlack"
+    android:backgroundTint="@color/backgroundBlack"
     tools:context=".MainActivity">
 
     <TextView
@@ -25,7 +27,8 @@
         android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="text"
-        android:text="enter a weapon name..."
+        android:hint="enter a weapon name..."
+        android:textColorHint="@color/accentBlue"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -33,17 +36,20 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="45dp"
+        android:background="@color/accentgrey"
+        android:backgroundTint="@color/accentgrey"
         android:text="Search"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/filterButton"
+        android:backgroundTint="@color/accentBlue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
