--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -102,4 +102,13 @@
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <TextView
+        android:id="@+id/propaganda"
+        android:layout_width="236dp"
+        android:layout_height="22dp"
+        android:text="Random propoganda phrase."
+        android:textAlignment="center"
+        tools:layout_editor_absoluteX="88dp"
+        tools:layout_editor_absoluteY="92dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
