--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,28 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundBlack"
-    android:backgroundTint="@color/backgroundBlack"
+    android:backgroundTint="@color/cardview_light_background"
     tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This will be the weapons page"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/searchET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:ems="10"
+        android:hint="@string/enter_a_weapon_name"
         android:inputType="text"
-        android:hint="enter a weapon name..."
         android:textColorHint="@color/accentBlue"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
@@ -42,20 +32,20 @@
         android:layout_marginTop="45dp"
         android:background="@color/accentgrey"
         android:backgroundTint="@color/accentgrey"
-        android:text="Search"
+        android:text="@string/search"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/filterButton"
-        android:backgroundTint="@color/accentBlue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="Filters"
+        android:backgroundTint="@color/accentBlue"
+        android:text="@string/filters"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintStart_toEndOf="@+id/editTextText"
+        app:layout_constraintStart_toEndOf="@+id/searchET"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <androidx.fragment.app.FragmentContainerView
@@ -65,5 +55,16 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ListView
+        android:id="@+id/weaponsLV"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchET"
+        tools:layout_editor_absoluteX="0dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
