--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,8 @@
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chipGroup"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:chipSpacingHorizontal="4dp">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/offChip"
@@ -73,7 +74,8 @@
                 android:layout_height="wrap_content"
                 android:checkable="true"
                 android:checked="true"
-                android:text="@string/offensive" />
+                android:text="@string/offensive"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/defChip"
@@ -81,7 +83,8 @@
                 android:layout_height="wrap_content"
                 android:checkable="true"
                 android:checked="true"
-                android:text="@string/defensive" />
+                android:text="@string/defensive"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/supChip"
@@ -89,7 +92,8 @@
                 android:layout_height="wrap_content"
                 android:checkable="true"
                 android:checked="true"
-                android:text="@string/supply" />
+                android:text="@string/supply"
+                android:textSize="12sp" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/misChip"
@@ -97,7 +101,18 @@
                 android:layout_height="wrap_content"
                 android:checkable="true"
                 android:checked="true"
-                android:text="@string/mission" />
+                android:text="@string/mission"
+                android:textSize="12sp" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/speChip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:checked="true"
+                android:text="@string/special"
+                android:textSize="12sp" />
+
         </com.google.android.material.chip.ChipGroup>
     </LinearLayout>
 
