--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundBlack"
-    android:backgroundTint="@color/white"
     tools:context=".ThirdActivity">
 
     <androidx.fragment.app.FragmentContainerView
@@ -85,28 +84,27 @@
 
     <TextView
         android:id="@+id/propaganda"
-        android:layout_width="236dp"
+        android:layout_width="wrap_content"
         android:layout_height="22dp"
-        android:layout_marginStart="88dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="87dp"
-        android:text="Random propoganda phrase."
         android:textAlignment="center"
+        android:textColor="@color/yellow"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <ListView
-        android:id="@+id/statusLV"
-        android:layout_width="351dp"
-        android:layout_height="233dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="384dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/propaganda" />
+<!--    <ListView-->
+<!--        android:id="@+id/statusLV"-->
+<!--        android:layout_width="351dp"-->
+<!--        android:layout_height="233dp"-->
+<!--        android:layout_marginStart="1dp"-->
+<!--        android:layout_marginTop="384dp"-->
+<!--        android:layout_marginEnd="1dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/propaganda" />-->
 
     <TableLayout
         android:id="@+id/table"
@@ -125,7 +123,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Planet" />
+                android:text="@string/planet"
+                android:textStyle="bold"
+                android:textColor="@color/yellow"/>
 
             <TextView
                 android:id="@+id/textView4"
@@ -133,7 +133,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Faction" />
+                android:text="@string/faction"
+                android:textStyle="bold"
+                android:textColor="@color/yellow"/>
 
             <TextView
                 android:id="@+id/textView2"
@@ -141,7 +143,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Players" />
+                android:text="@string/players"
+                android:textStyle="bold"
+                android:textColor="@color/yellow"/>
 
             <TextView
                 android:id="@+id/textView"
@@ -149,7 +153,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Percent" />
+                android:text="@string/percent"
+                android:textStyle="bold"
+                android:textColor="@color/yellow"/>
         </TableRow>
 
     </TableLayout>
