--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="accentBlue">#526787</color>
     <color name="accentgrey">#a9b0ba</color>
     <color name="darkRed">#6b1b1b</color>
+    <color name="yellow">#FFE607</color>
+
+
 </resources>
