--- a/app/src/main/res/drawable/down_arrow.xml
+++ b/app/src/main/res/drawable/down_arrow.xml
@@ -1,5 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="20dp" android:tint="#a9b0ba" android:viewportHeight="960" android:viewportWidth="960" android:width="36dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="10dp" android:tint="@color/lightgrey" android:viewportHeight="960" android:viewportWidth="960" android:width="36dp">
       
-    <path android:fillColor="@android:color/white" android:pathData="M480,600L280,400L680,400L480,600Z"/>
+    <path android:fillColor="@color/accentBlue" android:pathData="M480,600L280,400L680,400L480,600Z"/>
     
 </vector>
