--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -7,12 +7,15 @@
 
     <TextView
         android:id="@+id/listTitle"
-        android:textSize="22dp"
+        android:textSize="22sp"
+        android:fontFamily="@font/fs_sinclair_bold"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@android:color/white" />
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:textColor="@color/white"
+
+        />
 
 </LinearLayout>
