--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,13 +7,14 @@
 
     <TextView
         android:id="@+id/expandedListItem"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:textColor="@color/accentgrey"
+        android:textSize="19sp"
+        android:textColor="@color/lightgrey"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp" />
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:fontFamily="@font/fs_sinclair_medium"
+        />
 
 </LinearLayout>
